# osago-test-client

./: README.md  crowd_cli.py  pyproject.toml
ssl/: ca-cert.pem  client-cert.pem
